// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Components - Track Card Snapshots renders mobile 1`] = `
<div>
  <h3
    className="ui left floated header"
  >
    0
  </h3>
  <div
    className="ui fluid card track"
    href={undefined}
    onClick={[Function]}
  >
    <a
      href=""
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        className="ui image"
        src=""
      />
    </a>
    <div
      className="content"
    >
      <div
        className="header"
      >
        <h4
          className="ui header"
        >
          <a
            href=""
            rel="noopener noreferrer"
            target="_blank"
          >
            
          </a>
        </h4>
      </div>
      <div
        className="meta"
      >
        <h5
          className="sub header"
        >
          0:00
        </h5>
      </div>
      <div
        className="description"
      >
        <h5
          className="sub header"
        >
          <a
            href=""
            rel="noopener noreferrer"
            target="_blank"
          >
            
          </a>
        </h5>
      </div>
    </div>
    <div
      className="extra content"
    >
      Album: 
      <a
        href=""
      >
        
      </a>
      <br />
      Number: 0
    </div>
  </div>
</div>
`;

exports[`App Components - Track Card Snapshots renders no mobile 1`] = `
<div>
  <h2
    className="ui left floated header"
  >
    0
  </h2>
  <div
    className="ui fluid card track"
    href={undefined}
    onClick={[Function]}
  >
    <a
      href=""
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        className="ui image"
        src=""
      />
    </a>
    <div
      className="content"
    >
      <div
        className="header"
      >
        <h3
          className="ui header"
        >
          <a
            href=""
            rel="noopener noreferrer"
            target="_blank"
          >
            
          </a>
        </h3>
      </div>
      <div
        className="meta"
      >
        <h4
          className="sub header"
        >
          0:00
        </h4>
      </div>
      <div
        className="description"
      >
        <h4
          className="sub header"
        >
          <a
            href=""
            rel="noopener noreferrer"
            target="_blank"
          >
            
          </a>
        </h4>
      </div>
    </div>
    <div
      className="extra content"
    >
      Album: 
      <a
        href=""
      >
        
      </a>
      <br />
      Number: 0
    </div>
  </div>
</div>
`;
